--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -1,14 +1,4 @@
-@mixin navbarTheme() {
-  list-style: none;
-  display: inline-block;
-  margin: 20px;
-
-  a {
-    color: #737373;
-    text-decoration: none;
-    font-size: 15px;
-  }
-}
+@import "variables";
 
 * {
   margin: 0;
@@ -120,7 +110,10 @@
 }
 
 
-@media (min-width: 600px) {
+@include sm {
+
+}
+@include md {
 
   .navbarDesktop {
     overflow: hidden;
