--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,57 +1,6 @@
-@import "form", "navbar", "buttons", "homeScreen", "whyChooseUs";
+@import "form", "navbar", "buttons", "homeScreen", "whyChooseUs","variables","videoEmbedding";
 
-@mixin sectionTitle() {
-  font-size: 44px;
-  color: #252B42;
-  text-align: center;
-  font-weight: 750;
-  font-family: $primary-font-family;
-  padding: 0 35px;
-}
 
-@mixin sectionParagraph() {
-  text-align: center;
-  @include textDesign;
-  padding: 20px 45px;
-}
-
-$screen-sm-min: 576px;
-
-// Small tablets (portrait view)
-$screen-md-min: 768px;
-
-// Tablets and small desktops
-$screen-lg-min: 992px;
-
-// Large tablets and desktops
-$screen-xl-min: 1200px;
-
-@mixin sm {
-  @media (min-width: #{$screen-sm-min}) {
-    @content;
-  }
-}
-
-// Medium devices
-@mixin md {
-  @media (min-width: #{$screen-md-min}) {
-    @content;
-  }
-}
-
-// Large devices
-@mixin lg {
-  @media (min-width: #{$screen-lg-min}) {
-    @content;
-  }
-}
-
-// Extra large devices
-@mixin xl {
-  @media (min-width: #{$screen-xl-min}) {
-    @content;
-  }
-}
 * {
   margin: 0;
   padding: 0;
@@ -73,66 +22,4 @@ div, section, span, ul, li, a, header {
   p {
     @include sectionParagraph;
   }
-}
-
-#video-embedding {
-  background: linear-gradient(180deg, #F3F3F3 55%, #16697A 45%);
-  padding: 50px 30px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.video-embedding-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.video-embedding-video-container {
-  position: relative;
-  aspect-ratio: auto 3/4;
-  display: flex;
-  overflow: hidden;
-  padding: 40px 0 10px 0;
-}
-
-.video-embedding-video-container video {
-  top: 0;
-  left: 0;
-  width: 90%;
-  height: 100%;
-  margin: 0 auto;
-  object-fit: cover;
-
-}
-
-@include sm{
-
-}
-
-@include md {
-  #video-embedding {
-    height: 100vh;
-    background: linear-gradient(180deg, #F3F3F3 50vh, #16697A 50vh);
-  }
-
-  .video-embedding-container {
-    min-width: 70%;
-  }
-
-
-  .video-embedding-video-container {
-    aspect-ratio: auto;
-    overflow: visible;
-  }
-}
-
-@include lg {
-
-}
-
-@include xl {
-
 }
