--- a/styles/whyChooseUs.scss
+++ b/styles/whyChooseUs.scss
@@ -1,9 +1,4 @@
-@mixin textDesign() {
-  color: #737373;
-  font-family: $primary-font-family;
-}
-
-$primary-font-family: system-ui;
+@import "variables";
 
 #whyChooseUs {
   padding: 30px 30px;
@@ -16,6 +11,11 @@ $primary-font-family: system-ui;
 .whyChooseUs-container {
   display: flex;
   flex-direction: column;
+  min-height: 0;
+  min-width: 0;
+  flex-shrink: 0;
+  overflow: hidden;
+
 }
 
 .whyChooseUs-title-container {
@@ -25,6 +25,7 @@ $primary-font-family: system-ui;
   flex-direction: column;
   justify-content: center;
 
+
 }
 
 .whyChooseUs-card-container{
@@ -32,6 +33,7 @@ $primary-font-family: system-ui;
   gap: 30px;
   flex-flow: row wrap;
   justify-content: center;
+
 }
 
 
@@ -95,11 +97,31 @@ $primary-font-family: system-ui;
 }
 
 
-@media (min-width: 600px) {
+@include sm{
 
+}
 
+@include md {
   #whyChooseUs{
-    height: 100vh;
-    padding: 0 30px;
+    height: 100%;
   }
+
+  .whyChooseUs-container{
+
+    max-width: 80%;
+  }
+}
+
+@include lg{
+  #whyChooseUs{
+    height: 100%;
+  }
+
+  .whyChooseUs-container{
+    max-width: 80%;
+  }
+}
+
+@include xl{
+
 }
